--- a/example.env
+++ b/example.env
@@ -16,11 +16,12 @@ DB_PASSWORD="password"
 DB_PING_TIMEOUT="10"
 DB_MIGRATIONS_DIR="internal/migrations"
 
-RABBIT_SERVICE="localhost"
-RABBIT_SERVICE_PORT="5671"
-RABBIT_CERTS_PATH=$HOME/certs/
+RABBIT_HOST="localhost"
+RABBIT_PORT="5672"
+RABBIT_USER="admin"
+RABBIT_PASSWORD="password"
 
-FB_KEYFILE_PATH=
+FB_KEYFILE_PATH="fb_key.json"
 
 # docker
 
