--- a/example.env
+++ b/example.env
@@ -21,7 +21,7 @@ RABBIT_PORT="5672"
 RABBIT_USER="admin"
 RABBIT_PASSWORD="password"
 
-FB_KEYFILE_PATH="fb_key.json"
+FB_KEYFILE_PATH="environment/firebase/fb_key.json"
 
 # docker
 
