--- a/example.env
+++ b/example.env
@@ -14,7 +14,7 @@ DB_DATABASE="wash_bonus"
 DB_USER="postgres"
 DB_PASSWORD="password"
 DB_PING_TIMEOUT="10"
-DB_MIGRATIONS_DIR="internal/migrations"
+DB_MIGRATIONS_DIR="migrations"
 
 RABBIT_HOST="localhost"
 RABBIT_PORT="5672"
