что то сделанно наверное

--- a/.env
+++ b/.env
@@ -9,16 +9,16 @@ HTTP_HOST="localhost"
 LOG_LEVEL="INFO"
 
 DB_HOST="localhost"
-DB_PORT="5431"
+DB_PORT="5432"
 DB_DATABASE="wash_payment"
 DB_USER="admin"
 DB_PASSWORD="password"
 DB_PING_TIMEOUT="10"
 DB_MIGRATIONS_DIR="migrations"
 
-RABBIT_HOST="localhost"
+RABBIT_HOST="dev.openrbt.com"
 # RABBIT_HOST="dev.openwashing.com"
-RABBIT_PORT="5672"
+RABBIT_PORT="4043"
 RABBIT_USER="wash_bonus_svc"
 RABBIT_PASSWORD="wash_bonus_svc"
 
@@ -29,7 +29,7 @@ FB_KEYFILE_PATH="environment/firebase/fb_key.json"
 WASH_PAYMENT_DB_USER="admin"
 WASH_PAYMENT_DB_PASSWORD="password"
 WASH_PAYMENT_DB_DATABASE="wash_payment"
-WASH_PAYMENT_DB_PORT="5431"
+WASH_PAYMENT_DB_PORT="5432"
 
 WASH_PAYMENT_PGADMIN_PASSWORD="password"
 WASH_PAYMENT_PGADMIN_PORT="8085"
