--- a/.env
+++ b/.env
@@ -16,9 +16,10 @@ DB_PASSWORD="password"
 DB_PING_TIMEOUT="10"
 DB_MIGRATIONS_DIR="migrations"
 
-RABBIT_HOST="dev.openrbt.com"
-# RABBIT_HOST="dev.openwashing.com"
-RABBIT_PORT="4043"
+# RABBIT_HOST="dev.openrbt.com"
+# RABBIT_PORT="4043"'
+RABBIT_HOST="localhost"
+RABBIT_PORT="5672"
 RABBIT_USER="wash_bonus_svc"
 RABBIT_PASSWORD="wash_bonus_svc"
 
